@@ -12,7 +12,7 @@
 
 /* Adjust margin/height */
 html body.admin-menu {
-  margin-top: 30px !important;
+  margin-top: 29px !important;
 }
 body div#toolbar {
   top: 30px;
@@ -20,13 +20,15 @@ body div#toolbar {
 
 #admin-menu {
   font: normal 0.9em "Lucida Grande", Verdana, sans-serif;
-  margin: 0 -20px;
-  padding: 0 20px;
   box-shadow: 0 3px 20px #000;
   -moz-box-shadow: 0 3px 20px #000;
   -webkit-box-shadow: 0 3px 20px #000;
   filter: progid:DXImageTransform.Microsoft.Shadow(color=#000000, direction='180', strength='10');
   -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(color=#000000, direction='180', strength='10')";
+}
+#admin-menu.admin-menu-position-fixed {
+  margin: 0 -20px;
+  padding: 0 20px;
 }
 #admin-menu-wrapper {
   padding: 5px 10px 0;
